# Project4

./: Automaton.h  BlkCommentAutomaton.cpp  BlkCommentAutomaton.h  CMakeLists.txt  CharMatcherAutomaton.cpp  CharMatcherAutomaton.h  ColonAutomaton.cpp  ColonDashAutomaton.cpp  ColonDashAutomaton.h  Database.h  DatalogProgram.h  Header.h  IDAutomaton.cpp  IDAutomaton.h  Interpreter.h  LCommentAutomaton.cpp  LCommentAutomaton.h  Lexer.cpp  Lexer.h  MatcherAutomaton.cpp  MatcherAutomaton.h  Parameter.h  Parser.cpp  Parser.h  Predicate.h  README.md  Relation.h  Rule.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  Tuple.h  main.cpp  makefile
Lab1PassOffCases/1-70/: input7.txt
Lab3PassOffCases/3-100/: input5.txt
Lab4PassOffCases/4-100/: input5.txt
